--- a/index.html
+++ b/index.html
@@ -4,50 +4,49 @@
 <meta charset="utf-8" />
 <meta name="keywords" content="コンパス,コンパスジャパン,ネットワークエンジニア,エンジニア派遣,システム開発,情報デザイン,ＩＴ,IT,ソリューション">
 <link href="css/common.css" rel="stylesheet" type="text/css">
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <title>株式会社コンパスジャパン</title>
 </head>
 <body>
 <div id="mainArea">
 	<div id="header">
-	<a href="index.html">
-		<img id="compassImage" src="images/compassjapan.png">
-	</a>
-	</div>
-		<!--<div id="wrapper">
-			<p class="delay1 delay"><a></a></p>
-		</div>-->
+		<a href="index.html">
+			<img id="compassImage" src="images/compassjapan.png">
+		</a>
+	</div><!--<div id="header">-->
 	
 	<div id="contentsArea">
 		<div id="menu">
 			<div id="HOME">
-			<a href="#" onMouseover="document.homeImage.src='images/home2.png'" onMouseout="document.homeImage.src='images/home1.png'">
-				<img id="homeImage" name="homeImage" class="menuImage" src="images/home1.png">
-			</a>
+			<!-- onMouseover="document.homeImage.src='images/home2.png'" onMouseout="document.homeImage.src='images/home1.png'"-->
+				<a href="#">
+					<img id="homeImage" name="homeImage" class="menuImage" src="images/home1.png">
+				</a>
 			</div>
 			<div id="about">
-			<a href="about.html" onMouseover="document.aboutImage.src='images/about2.png'" onMouseout="document.aboutImage.src='images/about1.png'">
-				<img id="aboutImage" name="aboutImage" class="menuImage" src="images/about1.png">
-			</a>
+				<a href="about.html">
+					<img id="aboutImage" name="aboutImage" class="menuImage" src="images/about1.png">
+				</a>
 			</div>
 			<div id="business">
-			<a href="business.html" onMouseover="document.businessImage.src='images/business2.png'" onMouseout="document.businessImage.src='images/business1.png'">
-				<img id="businessImage" name="businessImage" class="menuImage" src="images/business1.png">
-			</a>
+				<a href="business.html">
+					<img id="businessImage" name="businessImage" class="menuImage" src="images/business1.png">
+				</a>
 			</div>
 			<div id="contact">
-			<a href="contact.html" onMouseover="document.contactImage.src='images/contact2.png'" onMouseout="document.contactImage.src='images/contact1.png'">
-				<img id="contactImage" name="contactImage" class="menuImage" src="images/contact1.png">
-			</a>
+				<a href="contact.html">
+					<img id="contactImage" name="contactImage" class="menuImage" src="images/contact1.png">
+				</a>
 			</div>
-		</div>
+		</div><!--<div id="menu">-->
+	</div><!--<div id="contentsArea">-->
 	
-
-	</div>
 	<div id="footer">
 		<div id="foot">
 			<img id="copyLight" src="images/copyright.gif" style="">
 		</div>
 	</div>
-</div>
+</div><!--<div id="mainArea">-->
 </body>
 </html>
