--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="mainArea">
+	<!--gitTEST5"-->
 	<div id="header">
 		<a href="index.html">
 			<img id="compassImage" src="images/compassjapan.png">
